[gd_scene load_steps=8 format=3 uid="uid://bhg2ek4b2v330"]

[ext_resource type="Script" uid="uid://blqxm2qtw031a" path="res://Scenes/Rythim/Scripts/rythm_ui.gd" id="1_y8bx2"]
[ext_resource type="Gradient" uid="uid://mlqfwqvuwh2a" path="res://indicator.tres" id="2_2j7v5"]
[ext_resource type="Texture2D" uid="uid://cq0bi32cr507g" path="res://Assets/UI/beat.png" id="3_hpcjs"]
[ext_resource type="FontFile" uid="uid://c6tdn2mbktk1h" path="res://Assets/Fonts/Raleway/static/Raleway-Light.ttf" id="4_y8bx2"]

[sub_resource type="Gradient" id="Gradient_dk1pf"]
colors = PackedColorArray(1, 1, 1, 1, 0.97269875, 0.8214018, 1.540184e-06, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fn3e5"]
gradient = SubResource("Gradient_dk1pf")

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2rhx6"]
gradient = ExtResource("2_2j7v5")

[node name="RythmUI" type="CanvasLayer"]
script = ExtResource("1_y8bx2")
metadata/_edit_use_anchors_ = true

[node name="RTimingWindowIndicator" type="ColorRect" parent="."]
visible = false
offset_left = 668.0
offset_top = 652.0
offset_right = 708.0
offset_bottom = 692.0
color = Color(0.8367193, 0.27851036, 0.0390737, 1)

[node name="LTimingWindowIndicator" type="ColorRect" parent="."]
visible = false
offset_left = 589.0
offset_top = 652.0
offset_right = 628.0
offset_bottom = 692.0
color = Color(0.8367193, 0.27851036, 0.0390737, 1)

[node name="BeatIndicator" type="ColorRect" parent="."]
visible = false
offset_left = 617.0
offset_top = 643.0
offset_right = 682.0
offset_bottom = 708.0

[node name="left_progress_bar" type="TextureProgressBar" parent="."]
visible = false
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 53.0
offset_top = 662.0
offset_right = 309.0
offset_bottom = 663.0
grow_vertical = 2
scale = Vector2(2.2849998, 29.935)
max_value = 1.0
step = 0.01
fill_mode = 1
texture_progress = SubResource("GradientTexture1D_fn3e5")

[node name="right_progress_bar" type="TextureProgressBar" parent="."]
visible = false
offset_left = 647.0
offset_top = 660.0
offset_right = 903.0
offset_bottom = 661.0
scale = Vector2(2.214, 29.935)
max_value = 1.0
step = 0.01
texture_progress = SubResource("GradientTexture1D_2rhx6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(648, 662)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_hpcjs")
hframes = 2

[node name="CenterSpawnPoint" type="Marker2D" parent="."]
position = Vector2(650, 673)

[node name="RightSpawnPoint" type="Marker2D" parent="."]
position = Vector2(1000, 673)

[node name="LeftSpawnPoint" type="Marker2D" parent="."]
position = Vector2(300, 673)

[node name="BeatLabel" type="Label" parent="."]
offset_left = 576.0
offset_top = 49.0
offset_right = 680.0
offset_bottom = 113.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_y8bx2")
theme_override_font_sizes/font_size = 32
text = "Beat"
horizontal_alignment = 1
